# majordomo-concierge-v2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: adk_config.yaml  logging_config.yaml
docs/: DEMO_SCRIPT.md  architecture.md  getting_started.md
examples/: basic_conversation.py  daily_briefing_demo.py  expense_tracking_demo.py
majordomo_agent/: .env.example  __init__.py  agent.py  config.yaml
scripts/setup/: init_databases.py  install.sh  verify_installation.py
src/majordomo_concierge_v2/: __init__.py
src/majordomo_concierge_v2/agents/: __init__.py  archivist.py  base.py  comptroller.py  concierge.py  majordomo.py  oracle.py  scribe.py  sentinel.py  taskmaster.py
src/majordomo_concierge_v2/analytics/: __init__.py  chart_generator.py  finance_analytics.py  productivity_analytics.py
src/majordomo_concierge_v2/memory/: __init__.py  cache_manager.py  conversation_history.py  db_manager.py  finance_store.py  journal_store.py  profile_store.py  recipe_store.py  task_store.py  vector_store.py
src/majordomo_concierge_v2/orchestration/: __init__.py  cost_optimizer.py  router.py  state_manager.py  workflow_builder.py
src/majordomo_concierge_v2/prompts/: __init__.py  context_builder.py  few_shot_examples.py  system_prompts.py
src/majordomo_concierge_v2/tools/: __init__.py
src/majordomo_concierge_v2/utils/: __init__.py  date_utils.py  embeddings.py  encryption.py  text_processing.py  validators.py
tests/unit/test_agents/: test_archivist_tools.py  test_scribe_tools.py
(+22 files in other folders)
